helloweb-ingress.yaml
# Copyright 2021 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: helloweb
  annotations:
    kubernetes.io/ingress.global-static-ip-name: helloweb-ip
    networking.gke.io/managed-certificates: personal-cert,family-cert
    kubernetes.io/ingress.class: "gce"
  labels:
    app: hello
spec:
  rules:
    - host: mansingka.org
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: helloweb-backend
                port:
                  number: 8080
    - host: aviralmansingka.me
      http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: goodbyeweb-backend
                port:
                  number: 8080
